# speech-synthesis-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  filtration_config.yaml  pyproject.toml
alembic/versions/: dead6ba9eb5f_feat_added_cps_metric_for_asr_and_.py
containers/enhancer/: compose.yaml  download.py
containers/enhancer/models/enhancer/: config.pbtxt
containers/postgres_and_metabase/: compose.yaml
docs/: datasets.md  ml_system_design_doc.md
docs/drawio_diagrams/: Metadata_DB.drawio  Model Workflow.drawio
src/: data_managers.py  utils.py
src/datasets/: audio_folder.py  load_directory_to_lakefs.py
src/datasets/EmoV_DB/: preprocess.py
src/datasets/MLS/: preprocess.py
src/filtration/: database_filtration.py
src/metrics_collection/: calculate_wer_cer.py  collect_audio_metrics.py  collect_audio_texts.py  collect_metrics_from_dataset.py  models.py
src/preprocessing/: asr_processing.py  enhance.py  mfa_processing.py
tests/datasets/: test_audio_folder.py
tests/datasets/EmoV_DB/: test_preprocess.py
triton/enhancer/: compose.yaml
triton/enhancer/models/enhancer/: config.pbtxt
triton/enhancer/models/enhancer/1/: model.py
triton/enhancer/models/enhancer_ensemble/: config.pbtxt
triton/enhancer/models/postprocessing/: config.pbtxt
triton/enhancer/models/postprocessing/1/: model.py
triton/enhancer/models/preprocessing/: config.pbtxt
triton/enhancer/models/preprocessing/1/: model.py
